# chocoTheCoo

./: .gitignore  README(2).md  README.md  manage.py  products.json  pyproject.toml
chat/: admin.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
config/: asgi.py  middleware.py  models.py  permissions_.py  settings.py  storages.py  urls.py
json_data/: point.json  products.json  reviews.json  seller.json  status.json  user.json
products/: admin.py  models.py  serializers.py  test_reviews.py  tests.py  urls.py  views.py
products/tests/: __init__.py  product_tests.py
templates/admin/: index.html
users/: admin.py  crontab.py  cryption.py  iamport.py  models.py  orderserializers.py  orderviews.py  serializer.py  serializers.py  social.py  subscription.py  test_orders.py  tests.py  urls.py  validated.py  views.py
users/templates/: email_template.css  email_template.html
